# PromptShield-CLI

./: .gitignore  =12.0.0  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
promptshield/: __init__.py  cli.py  models.py  reporter.py  rules.py  scanner.py  tui.py  utils.py
tests/: test_rules.py  test_scanner.py
